Fix friends alignment

--- a/src/app/profile-view/profile-view.component.css
+++ b/src/app/profile-view/profile-view.component.css
@@ -52,3 +52,6 @@ h5 {
 .card {
     margin-top: 75px;
 }
+.friendsbtn {
+    margin: 10px 0;
+}
